apps/base/passer-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passer-home
  namespace: passer-home
  labels:
    app.kubernetes.io/name: passer-home
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: passer-home
  ports:
    - name: http
      port: 80
      targetPort: http
